[gd_scene load_steps=5 format=3 uid="uid://bff3u0q3ik4d2"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_15eis"]
[ext_resource type="AudioStream" uid="uid://caiunm6hroxmp" path="res://sound/click-151673.mp3" id="1_woi6n"]
[ext_resource type="Texture2D" uid="uid://cttenfiiko8y8" path="res://assets/Tiny Swords/Tiny Swords (Update 010)/UI/Buttons/Button_Disable_3Slides.png" id="3_5b1mr"]
[ext_resource type="Texture2D" uid="uid://bh27rq0u18t7g" path="res://assets/Tiny Swords/Tiny Swords (Update 010)/UI/Buttons/Button_Hover_3Slides.png" id="4_3oong"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_15eis")

[node name="Menu" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 192.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
alignment = 1

[node name="New Game" type="TextureButton" parent="Menu"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
texture_normal = ExtResource("3_5b1mr")
texture_pressed = ExtResource("3_5b1mr")
texture_hover = ExtResource("4_3oong")
stretch_mode = 3

[node name="Continue (initially hidden)" type="TextureButton" parent="Menu"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("3_5b1mr")
texture_pressed = ExtResource("3_5b1mr")
texture_hover = ExtResource("4_3oong")
stretch_mode = 3

[node name="Settings" type="TextureButton" parent="Menu"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("3_5b1mr")
texture_pressed = ExtResource("3_5b1mr")
texture_hover = ExtResource("4_3oong")
stretch_mode = 3

[node name="Exit" type="TextureButton" parent="Menu"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("3_5b1mr")
texture_pressed = ExtResource("3_5b1mr")
texture_hover = ExtResource("4_3oong")
stretch_mode = 3

[node name="SoundSettings" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 523.0
offset_top = 365.0
offset_right = 523.0
offset_bottom = 365.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="Sound" type="TextureButton" parent="SoundSettings"]
layout_mode = 2
texture_normal = ExtResource("3_5b1mr")
texture_pressed = ExtResource("3_5b1mr")
texture_hover = ExtResource("4_3oong")
stretch_mode = 3

[node name="Back" type="TextureButton" parent="SoundSettings"]
layout_mode = 2
texture_normal = ExtResource("3_5b1mr")
texture_pressed = ExtResource("3_5b1mr")
texture_hover = ExtResource("4_3oong")
stretch_mode = 3

[node name="Control" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = 479.0
offset_top = 252.0
offset_right = 479.0
offset_bottom = 252.0
scale = Vector2(0.5, 0.5)

[node name="Master" type="HSlider" parent="Control"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 16.0

[node name="Music" type="HSlider" parent="Control"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 16.0

[node name="Effects" type="HSlider" parent="Control"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 16.0

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="ClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_woi6n")

[node name="MenuAnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="pressed" from="Menu/New Game" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Menu/New Game" to="." method="_play_click_sound"]
[connection signal="pressed" from="Menu/Continue (initially hidden)" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Menu/Continue (initially hidden)" to="." method="_play_click_sound"]
[connection signal="pressed" from="Menu/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Menu/Settings" to="." method="_play_click_sound"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Menu/Exit" to="." method="_play_click_sound"]
[connection signal="pressed" from="SoundSettings/Sound" to="." method="_on_Sound_pressed"]
[connection signal="pressed" from="SoundSettings/Sound" to="." method="_play_click_sound"]
[connection signal="pressed" from="SoundSettings/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="SoundSettings/Back" to="." method="_play_click_sound"]
[connection signal="value_changed" from="Control/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="Control/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="Control/Effects" to="." method="_on_Effects_value_changed"]
